--- a/app/frontend/src/template/arviointi/arviointi.html
+++ b/app/frontend/src/template/arviointi/arviointi.html
@@ -30,7 +30,7 @@
       <h3 sticky-header top="40" class="hidden-sm hidden-xs">{{ kohdealue | lokalisoiKentta:'nimi' }} – {{'arviointi.miten' | translate}}</h3>
       <h3 sticky-header top="60" class="hidden-md hidden-lg">{{ kohdealue | lokalisoiKentta:'nimi' }} – {{'arviointi.miten' | translate}}</h3>
 
-      <section class="kysymys" ng-repeat="kuvaus in kohdealue.kuvaukset">
+      <section class="kysymys" ng-repeat="kuvaus in kohdealue.kuvaukset" id="kuvaus{{kuvaus.ammattitaidonkuvaus_id}}">
         <p>{{ kuvaus | lokalisoiKentta:'nimi' }}</p>
         <div class="vastaus_valinnat">
           <div class="valinnat-container arvosanat">
