OPH-1426: ePerusteet ja järjestäjät -linkkien ohjeen asettelua paremmaksi mobiilissa

--- a/app/frontend/src/sass/yhteiset/_typography.scss
+++ b/app/frontend/src/sass/yhteiset/_typography.scss
@@ -61,6 +61,8 @@ a {color : $primary-color; text-decoration: none;
   margin-left: 5px;
   padding-top: 3px;
   opacity: .7;
+  font-size: 1.5em;
+  vertical-align: text-bottom;;
 }
 
 .linkkipopover:hover {
