--- a/app/frontend/src/sass/yhteiset/_animate.scss
+++ b/app/frontend/src/sass/yhteiset/_animate.scss
@@ -9,10 +9,10 @@
 }
 
 .reveal-animation.ng-leave {
-  height: 110px;
+  height: 6em;
 }
 .reveal-animation.ng-enter.ng-enter-active {
-  height: 110px;
+  height: 6em;
 }
 
 .reveal-animation.ng-enter {
