--- a/app/frontend/src/sass/partials/_mediaquery.scss
+++ b/app/frontend/src/sass/partials/_mediaquery.scss
@@ -40,7 +40,6 @@
 
 @media only screen and (max-width: 480px) {
   #oph-logo {
-    /* width: 60%; */
     position: absolute;
     top: 5px;
     right: 0px;
@@ -49,5 +48,10 @@
   fieldset, .search-field {
     width: 100%;
   }
-
+  .sivut {
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    margin-bottom: .5em;
+  }
 }
