--- a/app/frontend/src/sass/yhteiset/_ohje.scss
+++ b/app/frontend/src/sass/yhteiset/_ohje.scss
@@ -15,13 +15,15 @@
 
   .avaa {
     cursor: pointer;
-    display: inline-block;
     vertical-align: middle;
     background-color: $primary-color;
     width: $ohje-button-size;
     height: $ohje-button-size;
     margin: 0 10px;
     @include icon-after(5px, 4px){@include help-icon;};
+    position: absolute;
+    top: -3em;
+    right: 0;
   }
 
   button.sulje {
@@ -38,8 +40,8 @@
     background-color: white;
     min-height: 100px;
     padding: 22px 10px 20px 10px;
-    right: 10px;
-    top: 2px;
+    right: 2em;
+    top: -2em;
     width: $ohje-popup-width;
     opacity: .94;
     color: $darkest-gray;
