--- a/app/frontend/src/template/arviointi/arviointi.html
+++ b/app/frontend/src/template/arviointi/arviointi.html
@@ -46,15 +46,15 @@
               {{ 'arviointi.eos' | translate }}
             </label>
 
-            <label style="display: block" class="vapaateksti-toggle" ng-class="{checked: vapaateksti_auki}" ng-click="">
-              <input type="checkbox" ng-model="vapaateksti_auki" name="vapaateksti" ng-click="" ng-checked="arviot[kuvaus.ammattitaidonkuvaus_id].vapaateksti" ng-init="vapaateksti_auki = arviot[kuvaus.ammattitaidonkuvaus_id].vapaateksti.length > 0" />
-              <span class="glyphicon glyphicon-pencil"></span>
-              <span class="asteikkoteksti">{{ 'arviointi.tekstivastaus' | translate }}</span>
+            <label style="display: block" class="vapaateksti-toggle needsclick" ng-class="{checked: vapaateksti_auki}" ng-click="">
+              <input class="needsclick" type="checkbox" ng-model="vapaateksti_auki" name="vapaateksti" ng-click="" ng-checked="arviot[kuvaus.ammattitaidonkuvaus_id].vapaateksti" ng-init="vapaateksti_auki = arviot[kuvaus.ammattitaidonkuvaus_id].vapaateksti.length > 0" />
+              <span class="glyphicon glyphicon-pencil needsclick"></span>
+              <span class="asteikkoteksti needsclick">{{ 'arviointi.tekstivastaus' | translate }}</span>
             </label>
           </div>
-          <div class="valinnat-container vapaateksti">
-            <div class="reveal-animation vapaatekstivastaus" ng-if="vapaateksti_auki">
-              <textarea ng-model="arviot[kuvaus.ammattitaidonkuvaus_id].vapaateksti" ng-model-options="{debounce: 200}" placeholder="{{ 'arviointi.tekstivastaus_placeholder' | translate }}" rows="4" class="form-control" maxlength="10000"></textarea>
+          <div class="valinnat-container vapaateksti needsclick">
+            <div class="reveal-animation vapaatekstivastaus needsclick" ng-if="vapaateksti_auki">
+              <textarea ng-model="arviot[kuvaus.ammattitaidonkuvaus_id].vapaateksti" ng-model-options="{debounce: 200}" placeholder="{{ 'arviointi.tekstivastaus_placeholder' | translate }}" rows="3" class="form-control needsclick" maxlength="10000"></textarea>
             </div>
           </div>
         </div>
