OPH-1426: Kaavio skaalautuu responsiivisesti

--- a/app/frontend/src/sass/partials/_kaavio.scss
+++ b/app/frontend/src/sass/partials/_kaavio.scss
@@ -3,6 +3,8 @@
   font-size: 1em;
   overflow: visible !important;
 
+  max-width: 65%;
+
   .kaavio-palkin-vari-0 {
     fill: $lighter-primary;
   }
