--- a/app/frontend/src/sass/partials/_base.scss
+++ b/app/frontend/src/sass/partials/_base.scss
@@ -3,6 +3,8 @@ html {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
 }
 
 body {
