--- a/app/frontend/src/template/direktiivit/kaavio.html
+++ b/app/frontend/src/template/direktiivit/kaavio.html
@@ -1,7 +1,4 @@
-<svg class="kaavio"
-  ng-attr-width="{{viivastonLeveys() + 50}}"
-  ng-attr-height="{{viivastonKorkeus() + 100}}">
-
+<svg class="kaavio" preserveAspectRatio="xMinYMin meet">
   <g transform="translate(40, 10)">
     <text
         class="kaavio-viivan-otsikko" style="font-size: 12px;"
