Estä ohje-popupin flicker

--- a/app/frontend/src/template/direktiivit/ohje.html
+++ b/app/frontend/src/template/direktiivit/ohje.html
@@ -1,5 +1,5 @@
 <div class="ohje">
-  <div class="ohje-popup" ng-show="nayta">
+  <div class="ohje-popup ng-hide" ng-show="nayta">
     <a class="sulje" ng-click="piilotaOhje()">
       <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
     </a>
