--- a/app/frontend/src/template/etusivu/etusivu.html
+++ b/app/frontend/src/template/etusivu/etusivu.html
@@ -72,6 +72,10 @@
       </div>
     </div>
 
+    <div ng-if="tutkinnot === undefined">
+      <span class="fa fa-spinner fa-spin fa-2x"></span>
+    </div>
+
     <h3 ng-if="tutkinnot.length == 0">{{ 'tutkinto.ei_loytynyt' | translate }}</h3>
 
     <div ng-if="tutkinnot.length > 0" class="list-group" style="margin-top: 10px;">
