--- a/app/frontend/src/sass/yhteiset/_ohje.scss
+++ b/app/frontend/src/sass/yhteiset/_ohje.scss
@@ -40,8 +40,8 @@
     background-color: white;
     min-height: 100px;
     padding: 22px 10px 20px 10px;
-    right: 2em;
-    top: -2em;
+    right: .6em;
+    top: -1.3em;
     width: $ohje-popup-width;
     opacity: .94;
     color: $darkest-gray;
