--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -103,11 +103,15 @@
   <div class="panel-footer">
     <div class="row">
       <div class="col-md-12">
-        <button class="btn btn-primary pull-left" role="button" ng-click="palaaArviointiin()">
-          <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>&nbsp;
-          {{ 'yleiset.arvioi_osaaminen' | translate }}
-        </button>
-        <tallennus></tallennus>
+        <div class="tutkinnon-osa-nav pull-left text-right">
+          <button class="btn btn-primary pull-left" role="button" ng-click="palaaArviointiin()">
+            <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>&nbsp;
+            {{ 'yleiset.arvioi_osaaminen' | translate }}
+          </button>
+        </div>
+        <div class="tutkinnon-osa-nav pull-right text-right">
+          <tallennus></tallennus>
+        </div>
       </div>
     </div>
   </div>
