--- a/app/frontend/src/sass/yhteiset/_buttons.scss
+++ b/app/frontend/src/sass/yhteiset/_buttons.scss
@@ -34,38 +34,53 @@ button:disabled {
     margin-bottom: 2px;
     font-size: 1.14285714285714em;
     color: $gray-color;
+    overflow: visible;
     &.active {
       background-color: $lighter-primary;
       a {
         color: white;
       }
+      &:after {
+        border-left: 1em solid $lighter-primary;
+      }
+      &:before {
+        border-top: 1em solid $lighter-primary;
+        border-bottom: 1em solid $lighter-primary;
+      }
     }
     &.enabled {
     }
-    &:after,
-    &:before {
+    &:after {
       content: ' ';
       position: absolute;
       right: 0;
-      top: -5px;
-      width: 15px;
-      height: 42px;
-      background-image: url("../img/path.png");
-      background-repeat: no-repeat;
-      background-position: 0 0;
+      top: 0;
+      width: 1.2em;
+      height: 100%;
+      border-top: 1em solid white;
+      border-left: 1em solid $lightest-gray;
+      border-bottom: 1em solid white;
     }
     &:before {
-      background-image: url("../img/path-inverse.png");
-      left: 0;
+      content: ' ';
+      position: absolute;
+      left: -1em;
+      top: 0;
+      width: 1em;
+      height: 100%;
+      border-top: 1em solid $lightest-gray;
+      border-left: 1em solid transparent;
+      border-bottom: 1em solid $lightest-gray;
+      z-index: 1000;
     }
     &:first-child {
       &:before {
-        background-image: none;
+        border: 0px;
       }
     }
     &:last-child {
       &:after {
-        background-image: none;
+        border: 0px;
       }
     }
   }
