OPH-1572: Rivinvaihdot kommenteissa näkyviin

--- a/app/frontend/src/sass/yhteiset/_bootstrap.scss
+++ b/app/frontend/src/sass/yhteiset/_bootstrap.scss
@@ -29,6 +29,11 @@ a.list-group-item {
   }
 }
 
+// Raportoinnin kommentit
+.popover-content {
+  white-space: pre-wrap;
+}
+
 // Override Bootstrap variables here (defaults from bootstrap-sass v3.3.4):
 
 //
