--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -10,7 +10,7 @@
     <div class="visible-print">
       <span>
         <span>{{ 'raportti.tulostus' | translate }}</span>
-      {{ 'raportti.paivays' | translate }}: {{ paivays | date: 'dd.MM.yyyy HH:mm' }}
+        <span style="white-space: nowrap;">{{ 'raportti.paivays' | translate }}: {{ paivays | date: 'dd.MM.yyyy HH:mm' }}</span>
       </span>
     </div>
   </div>
