--- a/app/frontend/src/template/direktiivit/tutkinnonosa-tilastot.html
+++ b/app/frontend/src/template/direktiivit/tutkinnonosa-tilastot.html
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="col-xs-6">
-      <span>{{ tutkinnonosa.arvioita }} / {{ tutkinnonosa.arvioitavia }}</span>
+      <span>{{ tutkinnonosa.arvioita }} / {{ tutkinnonosa.arvioitavia }}, {{ 'raportti.eos_vastauksia' | translate }} {{ tutkinnonosa.arvioitaEos }}</span>
     </div>
   </div>
 </div>
