--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -29,19 +29,19 @@
       <div class="col-md-12">
         <div class="pull-right">
           <form action="api/kaiku" method="post">
-            <a class="btn btn-default" href="javascript:window.print()" popover="{{ 'raportti.tulosta_ohje' | translate }}" popover-trigger="mouseenter">
+            <a class="btn btn-default" href="javascript:window.print()" uib-popover="{{ 'raportti.tulosta_ohje' | translate }}" popover-trigger="mouseenter">
               <span class="glyphicon glyphicon-print"></span>
               <span translate="raportti.tulosta"></span>
             </a>
             <input type="hidden" name="data" value="{{tekstiRaportti}}">
-            <button class="btn btn-default" type="submit" ng-click="estaPoistumisvaroitus()" popover="{{ 'raportti.lataa_tekstiraportti_ohje' | translate }}" popover-trigger="mouseenter" popover-append-to-body="true"><span class="glyphicon glyphicon-download-alt"></span> <span translate="raportti.lataa_tekstiraportti"></span></button>
+            <button class="btn btn-default" type="submit" ng-click="estaPoistumisvaroitus()" uib-popover="{{ 'raportti.lataa_tekstiraportti_ohje' | translate }}" popover-trigger="mouseenter" popover-append-to-body="true"><span class="glyphicon glyphicon-download-alt"></span> <span translate="raportti.lataa_tekstiraportti"></span></button>
           </form>
         </div>
       </div>
     </div>
 
-    <tabset>
-      <tab select="valittuRaportti='raportti'" heading="{{ 'yleiset.raportti' | translate }}">
+    <uib-tabset>
+      <uib-tab select="valittuRaportti='raportti'" heading="{{ 'yleiset.raportti' | translate }}">
         <br />
         <h3 translate="raportti.keskiarvot"></h3>
         <div class="col-md-12">
@@ -79,12 +79,12 @@
               <tr ng-repeat="kuvaus in kohdealue.kuvaukset">
                 <td><a ng-href="#/arviointi?osa={{tutkinnonosa.osatunnus}}#kuvaus{{kuvaus.ammattitaidonkuvaus_id}}" style="color: black; text-decoration: none">{{ kuvaus | lokalisoiKentta:'nimi' }}</a></td>
                 <td>
-                  <span class="arvio eos" ng-if="kuvaus.arvio.arvio === null" translate="arviointi.eos_lyh" popover="{{ 'arviointi.eos' | translate }}" popover-trigger="mouseenter click"></span>
-                  <span class="arvio" ng-if="kuvaus.arvio.arvio" popover="{{ 'arviointi.asteikko' + kuvaus.arvio.arvio | translate }}" popover-trigger="mouseenter click">{{ kuvaus.arvio.arvio }}</span>
+                  <span class="arvio eos" ng-if="kuvaus.arvio.arvio === null" translate="arviointi.eos_lyh" uib-popover="{{ 'arviointi.eos' | translate }}" popover-trigger="mouseenter click"></span>
+                  <span class="arvio" ng-if="kuvaus.arvio.arvio" uib-popover="{{ 'arviointi.asteikko' + kuvaus.arvio.arvio | translate }}" popover-trigger="mouseenter click">{{ kuvaus.arvio.arvio }}</span>
 
                 </td>
                 <td ng-class="{'text-center': !naytaKommentit, 'text-italic': naytaKommentit}">
-                  <a popover="{{ kuvaus.arvio.vapaateksti | limitTo:250 }}{{ kuvaus.arvio.vapaateksti.length > 250 ? '...' : '' }}" popover-placement="left" popover-trigger="mouseenter click" ng-if="!naytaKommentit && kuvaus.arvio.vapaateksti">
+                  <a uib-popover="{{ kuvaus.arvio.vapaateksti | limitTo:250 }}{{ kuvaus.arvio.vapaateksti.length > 250 ? '...' : '' }}" popover-placement="left" popover-trigger="mouseenter click" ng-if="!naytaKommentit && kuvaus.arvio.vapaateksti">
                     <span class="glyphicon glyphicon-comment" style="font-size: 2em;"></span>
                   </a>
                   <em ng-if="naytaKommentit" ng-bind="kuvaus.arvio.vapaateksti" style="white-space: pre-wrap;"></em>
@@ -94,15 +94,15 @@
             </table>
           </section>
         </section>
-      </tab>
-      <tab select="valittuRaportti='tekstiraportti'" heading="{{ 'raportti.tyyppi_tekstiraportti' | translate }}">
+      </uib-tab>
+      <uib-tab select="valittuRaportti='tekstiraportti'" heading="{{ 'raportti.tyyppi_tekstiraportti' | translate }}">
         <br />
         <div class="form-group">
           <textarea class="form-control hidden-print" ng-model="tekstiRaportti" style="height: 30em; font-family: monospace" readonly></textarea>
           <p class="tekstiRaportti visible-print">{{tekstiRaportti}}</p>
         </div>
-      </tab>
-    </tabset>
+      </uib-tab>
+    </uib-tabset>
   </div>
   <div class="panel-footer">
     <div class="row">
