--- a/app/frontend/src/template/arviointi/arviointi.html
+++ b/app/frontend/src/template/arviointi/arviointi.html
@@ -2,7 +2,7 @@
 
 <polku></polku>
 
-<div class="panel panel-primary">
+<div class="panel panel-primary arviointi">
   <div class="panel-heading">
     <h3 class="panel-title">{{ 'arviointi.arvioi_osaamisesi' | translate }} - {{ tutkinto | lokalisoiKentta:'nimi' }}</h3>
   </div>
