--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -79,7 +79,7 @@
               <tr ng-repeat="kuvaus in kohdealue.kuvaukset">
                 <td><a ng-href="#/arviointi?osa={{tutkinnonosa.osatunnus}}#kuvaus{{kuvaus.ammattitaidonkuvaus_id}}" style="color: black; text-decoration: none">{{ kuvaus | lokalisoiKentta:'nimi' }}</a></td>
                 <td>
-                  <span class="arvio eos" ng-if="kuvaus.arvio.arvio === null" translate="arviointi.eos_lyh" uib-popover="{{ 'arviointi.eos' | translate }}" popover-trigger="mouseenter click"></span>
+                  <span class="arvio eos raportti" ng-if="kuvaus.arvio.arvio === null" translate="arviointi.eos_lyh" uib-popover="{{ 'arviointi.eos' | translate }}" popover-trigger="mouseenter click"></span>
                   <span class="arvio" ng-if="kuvaus.arvio.arvio" uib-popover="{{ 'arviointi.asteikko' + kuvaus.arvio.arvio | translate }}" popover-trigger="mouseenter click">{{ kuvaus.arvio.arvio }}</span>
 
                 </td>
