OPH-1584: Kun tutkinnon osia on paljon, tulosteen etusivu on sekaisin

--- a/app/frontend/src/template/direktiivit/kaavio.html
+++ b/app/frontend/src/template/direktiivit/kaavio.html
@@ -1,4 +1,4 @@
-<svg class="kaavio" preserveAspectRatio="xMinYMin meet">
+<svg id="kaavio" class="kaavio" preserveAspectRatio="xMinYMin meet">
   <g>
     <line ng-repeat="viiva in viivat"
       class="kaavio-viiva"
