--- a/app/frontend/src/template/direktiivit/kaavio.html
+++ b/app/frontend/src/template/direktiivit/kaavio.html
@@ -1,65 +1,24 @@
-<svg id="kaavio" class="kaavio" preserveAspectRatio="xMinYMin meet">
-  <g>
-    <line ng-repeat="viiva in viivat"
-      class="kaavio-viiva"
-      ng-attr-y1="{{0}}"
-      ng-attr-x1="{{asetukset.palkinMaksimiPituus * (1 - viiva.paikka)}}"
-      ng-attr-y2="{{viivastonKorkeus()}}"
-      ng-attr-x2="{{asetukset.palkinMaksimiPituus * (1 - viiva.paikka)}}" />
-
-    <line class="kaavio-viiva"
-      ng-attr-y1="{{0}}"
-      ng-attr-x1="{{0}}"
-      ng-attr-y2="{{0}}"
-      ng-attr-x2="{{asetukset.palkinMaksimiPituus}}" />
-    <line class="kaavio-viiva"
-      ng-attr-y1="{{viivastonKorkeus()}}"
-      ng-attr-x1="{{0}}"
-      ng-attr-y2="{{viivastonKorkeus()}}"
-      ng-attr-x2="{{asetukset.palkinMaksimiPituus}}" />
-
-    <circle ng-repeat-start="viiva in viivat.slice(1)"
-      class="kaavio-viivan-otsikon-tausta"
-      ng-attr-cy="{{viivastonKorkeus() + 25}}"
-      ng-attr-cx="{{asetukset.palkinMaksimiPituus * (viiva.paikka)}}"
-      ng-attr-r="{{20}}">
-    </circle>
-
-    <text
-        class="kaavio-viivan-otsikko" style="font-size: 12px;"
-        ng-attr-y="{{viivastonKorkeus() + 60}}"
-        ng-attr-x="{{asetukset.palkinMaksimiPituus * (viiva.paikka)}}">
-      <tspan text-anchor="middle" translate="arviointi.asteikko{{$index+1}}"></tspan>
-    </text>
-
-    <text
-      class="kaavio-viivan-otsikko"
-      ng-attr-y="{{viivastonKorkeus() + 33}}"
-      ng-attr-x="{{asetukset.palkinMaksimiPituus * (viiva.paikka)}}"
-      ng-repeat-end>
-      <tspan text-anchor="middle">{{viiva.teksti}}</tspan>
-    </text>
-
-
-    <rect ng-repeat-start="data in jakauma"
-      ng-attr-class="{{ 'kaavio-palkin-vari-' + data.vari }}"
-      ng-attr-width="{{palkinPituus(data.arvo)}}"
-      ng-attr-height="{{asetukset.palkinLeveys}}"
-      ng-attr-y="{{paikkaPalkistonSuhteen($index, 0, 0.5)}}"
-      ng-attr-x="0" />
-    <g stroke="black" ng-repeat-end style="font-family: 'Open Sans', Arial, sans-serif; font-size: 1.3em">
-      <text
-        class="kaavio-palkin-otsikko"
-        ng-attr-y="{{paikkaPalkistonSuhteen($index, 0, 1)}}"
-        x="10">
-        <tspan text-anchor="start">{{$index + 1}}. {{ data | lokalisoiKentta:'nimi' }}</tspan>
-      </text>
-      <text
-        class="kaavio-palkin-keskiarvo"
-        ng-attr-x="{{asetukset.palkinMaksimiPituus + 10}}"
-        ng-attr-y="{{paikkaPalkistonSuhteen($index, 0, 1)}}">
-        {{data.arvo | number:2}}
-      </text>
-    </g>
-  </g>
-</svg>
+<div style="margin-left: 4em;">
+  <div ng-repeat="data in jakauma" ng-init="last = $last" class="graafi">
+    <div class="row">
+      <div class="col-md-6" style="z-index: 1;">
+        <span>{{ data | lokalisoiKentta:'nimi' }}</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-6">
+        <div class="progress" style="margin-bottom: 0;">
+          <div class="progress-bar" role="progressbar" aria-valuenow="{{ tutkinnonosa.arvioituna }}" aria-valuemin="0" aria-valuemax="100" style="min-width: 0em; width: {{(data.arvo)*25}}%;" ng-style="{ 'width' : (data.arvo)*25+'%'}">
+            {{data.arvo | number:2}}
+            <div class="kaavio-viiva" ng-repeat="viiva in viivat" ng-style="{left: viiva.paikka}">
+              <span class="arvio" ng-if="last">{{viiva.teksti}}</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-6">
+        <span>{{data.arvo | number:2}}</span>
+      </div>
+    </div>
+  </div>
+</div>
