OPH-1589: Lisätty selitteet keskiarvotaulukon arvosanoihin. Asettelukorjauksia.

--- a/app/frontend/src/sass/partials/_base.scss
+++ b/app/frontend/src/sass/partials/_base.scss
@@ -109,3 +109,15 @@ footer {
 .nopad {
   padding: 0;
 }
+.pad-1-left {
+  margin-left: 1em;
+}
+.pad-2-left {
+  margin-left: 2em;
+}
+.pad-3-left {
+  margin-left: 3em;
+}
+.pad-4-left {
+  margin-left: 4em;
+}
