--- a/app/frontend/src/template/direktiivit/tutkinnonosa-tilastot.html
+++ b/app/frontend/src/template/direktiivit/tutkinnonosa-tilastot.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-md-12">
-    <strong style="margin-left: 2em">{{ otsikko }} ({{ 'raportti.valittu' | translate }} {{ suodatetutTutkinnonosat.length }}/{{ tutkinnonosiaTyypilla }})</strong>
+    <strong class="pad-1-left">{{ otsikko }} ({{ 'raportti.valittu' | translate }} {{ suodatetutTutkinnonosat.length }}/{{ tutkinnonosiaTyypilla }})</strong>
   </div>
 </div>
-<div ng-repeat="tutkinnonosa in suodatetutTutkinnonosat" style="margin-left: 4em" class="graafi">
+<div ng-repeat="tutkinnonosa in suodatetutTutkinnonosat" class="graafi pad-2-left">
   <div class="row"><div class="col-md-6"><span>{{ tutkinnonosa | lokalisoiKentta:'nimi' }}</span></div></div>
   <div class="row">
     <div class="col-xs-6">
-      <div class="progress" style="margin-bottom: 0;">
+      <div class="progress" style="min-width: 8em;">
         <div class="progress-bar" role="progressbar" aria-valuenow="{{ tutkinnonosa.arvioituna }}" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: {{ tutkinnonosa.arvioituna }}%;" ng-style="{ 'width' : tutkinnonosa.arvioituna+'%'}">{{ tutkinnonosa.arvioituna }}%</div>
       </div>
     </div>
