OPH-1589: Lisätty selitteet keskiarvotaulukon arvosanoihin. Asettelukorjauksia.

--- a/app/frontend/src/sass/yhteiset/_print.scss
+++ b/app/frontend/src/sass/yhteiset/_print.scss
@@ -48,6 +48,9 @@
     border: 10px solid #6CC555;
     line-height: 2px;
   }
+  .kaavio-viiva .arvio {
+    margin-top: 3em;
+  }
   section.tutkinnonosa {
     page-break-before: always;
   }
