--- a/app/frontend/src/sass/partials/_base.scss
+++ b/app/frontend/src/sass/partials/_base.scss
@@ -121,3 +121,9 @@ footer {
 .pad-4-left {
   margin-left: 4em;
 }
+
+ul.nobullet{
+  list-style-type: none;
+  padding: 0;
+  font-size: .85714285714286em;
+}
