--- a/app/frontend/src/sass/views/_arviointi.scss
+++ b/app/frontend/src/sass/views/_arviointi.scss
@@ -56,6 +56,7 @@ h3 + section.kysymys {
       float: left;
       overflow: visible;
       margin-right: 2em;
+      padding-left: 1em;
       &:last-child {
         margin-right: 0;
       }
